--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,12 +31,14 @@ sniffio = "1.3.0"
 starlette = "0.27.0"
 tomli = "2.0.1"
 typing-extensions = "4.9.0"
+beanie = "^1.24.0"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
 pytest-mock = "^3.12.0"
 mongomock = "^4.1.2"
+pytest-asyncio = "^0.23.3"
 
 [build-system]
 requires = ["poetry-core"]
